fix unlike post, fix only get public post in explore